--- a/index.css
+++ b/index.css
@@ -104,7 +104,48 @@ body {
     font-size: 19px;
 }
 
+/* search hiden */
 
+.seacrh-hiden {
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 999999;
+    justify-content: space-between;  
+    position: fixed;
+    display: none;
+}
+.seacrh-hiden #cancel-hiden {
+    font-size:38px;
+    position: absolute;
+    right:40px;
+    top:30px;
+    cursor: pointer;
+}
+.seacrh-hiden .seacrh {
+   margin: 30px auto;
+   position: relative;
+   display: flex;
+   align-items:center;
+}
+.seacrh-hiden .seacrh input {
+    padding: 15px;
+    outline: none;
+    border: none;
+    background-color: black;
+    color:white;
+    border-bottom: 1px solid white;
+    width: 500px;
+    font-size:18px;
+}
+.seacrh-hiden .seacrh i {
+    color:rgb(255, 255, 255);
+    border-bottom: 1px solid white;
+    padding: 13px;
+    cursor:pointer;
+    font-size:26px;
+}
 .container-1 {
     display: flex;
     justify-content: space-between;
@@ -139,7 +180,7 @@ body {
 }
 .container-1 .text .textForward h1 {
     font-size: 300px;
-    color: rgb(233, 233, 233);
+    color: rgb(228, 228, 228);
     letter-spacing: 10px;
 }
 
@@ -222,7 +263,7 @@ body {
     /*background-color: red;*/
 }
 .container-1 .bg-black .content .text .desc p {
-    color: rgb(200, 200, 200);
+    color: rgb(251, 251, 251);
     font-family: 'Times New Roman', Times, serif;
     font-size: 19px;
     line-height: 27px;
@@ -412,7 +453,6 @@ body {
     bottom: 15px;
     display: inline-block;
     width: 80%;
-    left: 30px;
 }
 .container4 .box .detail a {
     color: black;
@@ -655,7 +695,7 @@ ol.flickity-page-dots {
     }
     .container-1 .text .textForward h1 {
         font-size: 130px;
-        color: rgb(240, 240, 240);
+        color: rgb(255, 255, 255);
         letter-spacing: 5px;
       
     }
@@ -682,10 +722,8 @@ ol.flickity-page-dots {
         background-color: black;
         width: 100%;
         top: 0;
-         margin-top: -2rem;
-         background-color: black;
-         width: 100%;
-         height: auto;
+        margin-top: -2rem;
+        height: auto;
     }
 
     .container-1 .bg-black .content .image {
@@ -751,7 +789,7 @@ ol.flickity-page-dots {
        padding-bottom: 20px;
     }
     .container-1 .bg-black .content .text .desc p {
-
+        color:white;
         font-family: 'Times New Roman', Times, serif;
         font-size: 16.5px;
         line-height: 1.6rem;
@@ -795,7 +833,8 @@ ol.flickity-page-dots {
         z-index: 10;
         flex-direction: column;
         margin: auto; 
-        padding-top: 64em;
+       top: 61em;
+       padding-top: 0;
         position: relative;
     }
     .container2 .container-image {
@@ -872,7 +911,7 @@ ol.flickity-page-dots {
     }
 
     .container3 {
-        margin-top: 4em;
+        padding-top: 60em;
     }
     .container3 h1 {
         font-size: 2.1em;
@@ -915,27 +954,28 @@ ol.flickity-page-dots {
         background-color: rgba(0,0,0,.6);
         opacity: 0;
         transition: .3s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .container4 .box .detail .title {
         text-align: center;
-        
+        position: absolute;
     }
     .container4 .box .detail p {
         color: white;
-        font-size: 34px;
+        font-size: 27px;
         text-align: center;
-        padding-top: 18px;
+        padding-top: 20px;
     }
     .container4 .box .detail span {
         color:rgb(233, 233, 233);
-        font-size: 20px;
+        font-size: 18px;
     }
     .container4 .box .detail .btn {
         position: absolute;
-        bottom: 15px;
-        display: inline-block;
-        width: 80%;
-        left: 30px;
+        bottom: 10px;
+        width: 86%;
     }
     .container4 .box .detail a {
         color: black;
@@ -944,11 +984,7 @@ ol.flickity-page-dots {
         padding: 10px 55px;
         font-weight: 500;
         border-radius :3px;
-        font-size: 18px;
-        display: flex;
-        text-align: center;
-        justify-content: center;
-       
+        font-size: 16px; 
     }
     .container4 .box:hover .img  img {
         transform: scale(1.1,1.1);
