--- a/index.css
+++ b/index.css
@@ -114,20 +114,30 @@ body {
     z-index: 999999;
     justify-content: space-between;  
     position: fixed;
-    display: none;
+    top: -105%;
+    display: flex;
+    transition: 0.5s;
 }
-.seacrh-hiden #cancel-hiden {
-    font-size:38px;
-    position: absolute;
-    right:40px;
-    top:30px;
+.seacrh-hiden.show {
+    top: 0%;
+}
+
+.seacrh-hiden #cancel-hide {
+    font-size:28px;
+    left:-12em;
+    top:0px;
     cursor: pointer;
+    position: absolute;
 }
 .seacrh-hiden .seacrh {
    margin: 30px auto;
    position: relative;
    display: flex;
-   align-items:center;
+}
+.seacrh-hiden .seacrh .container-search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .seacrh-hiden .seacrh input {
     padding: 15px;
@@ -141,11 +151,16 @@ body {
 }
 .seacrh-hiden .seacrh i {
     color:rgb(255, 255, 255);
-    border-bottom: 1px solid white;
     padding: 13px;
     cursor:pointer;
     font-size:26px;
+    margin-left: 30px;
 }
+.seacrh-hiden .seacrh #search {
+    border-bottom: 1px solid white;
+    margin-left: 0px;
+}
+
 .container-1 {
     display: flex;
     justify-content: space-between;
@@ -433,9 +448,13 @@ body {
     background-color: rgba(0,0,0,.6);
     opacity: 0;
     transition: .3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .container4 .box .detail .title {
     text-align: center;
+    position: absolute;
     
 }
 .container4 .box .detail p {
@@ -451,7 +470,6 @@ body {
 .container4 .box .detail .btn {
     position: absolute;
     bottom: 15px;
-    display: inline-block;
     width: 80%;
 }
 .container4 .box .detail a {
@@ -497,7 +515,7 @@ body {
 .carousel .box {
     display: flex;
     flex-direction: column;
-    padding: 3em 5em 2em 5em;
+    padding: 3em 4em 2em 5em ;
     margin: 0 3px;
 }
 
@@ -518,6 +536,7 @@ body {
 .carousel .box .container-desc {
     /*background-color: red;*/
     font-family: 'Poppins', sans-serif;
+    padding-bottom: 50px;
 }
 .carousel .box .container-desc .title {
     text-align: left;
@@ -533,11 +552,192 @@ body {
     font-size: 20px;
     padding-top: 0.3em;
 }
+.flickity-button {
+    opacity: 1;
+}
+.flickity-button:disable {
+    opacity: 1;
+}
 ol.flickity-page-dots {
+    display: block;
+    bottom: 10px;
+    padding-bottom: 10px;
+}
+.flickity-page-dots .dot.is-selected {
+    background: rgb(187, 187, 187);
+}
+
+.container6 {
+    padding-top:4em;
+    margin: auto 70px;
+}
+.container6 .title {
     display: none;
+}
+.container6 .container-map {
+    display: flex;
+    align-items: center;
+}
+.container6 .container-map .map {
+    box-shadow: rgba(17, 12, 46, 0.13) 0px 5px 20px 0px;
+    overflow: hidden;
+}
+.container6 .container-map .map iframe {
+    width: 2400px;
+}
+.container6 .container-map .desc {
+    padding-left: 50px;
+}
+.container6 .container-map .desc h1 {
+    font-size: 50px;    
+    padding-bottom: 0.5em;
+}
+.container6 .container-map .desc p {
+    font-size: 17px;
+    line-height:1.4em;
+    letter-spacing: 0.5px;
+}
+
+/* container 7 */
+.container7 {
+    width: 100%;
+    height: 500px;
+    background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(img/cont7.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    margin-top: 4em;
+    display: flex;
+    justify-content: center;
+}
+.container7 .box {
+    border: 5px solid white;
+    position: relative;
+    margin: auto;
+    width: 800px;
+    height: 300px;
+}
+.container7 .box .text {
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    text-align: center;
+}
+.container7 .box .text p {
+    color: white;
+    font-size:49px;
+    padding-bottom: 25px;
+}
+.container7 .box .text a {
+    color: black;
+    text-decoration: none;
+    background-color: white;
+    padding: 15px 24px;
+    font-size: 19px;
+}
+
+
+footer {
+    margin-top: 4em;
+    background-color: black;
+    font-family: 'Poppins', sans-serif;
+}
+footer .container-content {
+    display: flex;
+    justify-content: space-around;
+    padding: 3em 3em;
+}
+footer .container-content .content {
+    display: flex;
+    flex-direction: column;
+    /*background-color: green;*/
+}
+footer .container-content .content .title h3 {
+    font-size: 26px;
+    color: white;
+    padding-bottom: 1em;
+}
+footer .container-content .content .sub-title {
+    display: flex;
+    flex-direction: column;
+}
+footer .container-content .content .sub-title a {
+    text-decoration: none;
+    color: #979797;
+    font-size: 18px;
+    margin-top: 10px;
+}
+footer .container-content .content .sub-title a:hover {
+    color: white;
+}
+
+footer .container-content .content .sub-title2 a {
+    text-decoration: none;
+    color: #979797;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+footer .container-content .content .sub-title2 a:hover {
+    color: white;
+}
+
+@media screen and (max-width: 296px) {
+    body {
+        display: none;
+    }
 }
 
 @media screen and (max-width : 576px) {
+    .seacrh-hiden {
+        background-color: rgb(0, 0, 0);
+        width: 100%;
+        height: 100%;
+        z-index: 999999;
+        justify-content: space-between;  
+        position: fixed;
+        top: -105%;
+        display: flex;
+        transition: 0.5s;
+    }
+    .seacrh-hiden.show {
+        top: 0%;
+    }
+    
+    .seacrh-hiden #cancel-hide {
+        font-size:23px;
+        top: 0;
+        left: -1.2em;
+        position: absolute;
+        cursor: pointer;
+    }
+    .seacrh-hiden .seacrh {
+       margin: 30px auto;
+       display: flex;
+       justify-content: center;
+    }
+    .seacrh-hiden .seacr .container-search {
+        display: flex;
+        align-items: center;
+    }
+    .seacrh-hiden .seacrh input {
+        padding: 15px;
+        outline: none;
+        border: none;
+        background-color: black;
+        color:white;
+        border-bottom: 1px solid white;
+        width: 60%;
+        font-size:16px;
+    }
+    .seacrh-hiden .seacrh #search {
+        color:rgb(255, 255, 255);
+        border-bottom: 1px solid white;
+        cursor:pointer;
+        font-size:23px;
+        margin-left: 0px;
+    }
     .navbar{
         background-color: rgb(255, 255, 255);
         display: flex;
@@ -833,9 +1033,9 @@ ol.flickity-page-dots {
         z-index: 10;
         flex-direction: column;
         margin: auto; 
-       top: 61em;
-       padding-top: 0;
+        top:61.5em;
         position: relative;
+        padding-top: 0em;
     }
     .container2 .container-image {
         height: 250px;
@@ -911,7 +1111,7 @@ ol.flickity-page-dots {
     }
 
     .container3 {
-        padding-top: 60em;
+        margin-top: 66em;
     }
     .container3 h1 {
         font-size: 2.1em;
@@ -964,13 +1164,13 @@ ol.flickity-page-dots {
     }
     .container4 .box .detail p {
         color: white;
-        font-size: 27px;
+        font-size: 34px;
         text-align: center;
-        padding-top: 20px;
+        padding-top: 18px;
     }
     .container4 .box .detail span {
         color:rgb(233, 233, 233);
-        font-size: 18px;
+        font-size: 20px;
     }
     .container4 .box .detail .btn {
         position: absolute;
@@ -984,7 +1184,7 @@ ol.flickity-page-dots {
         padding: 10px 55px;
         font-weight: 500;
         border-radius :3px;
-        font-size: 16px; 
+        font-size: 18px; 
     }
     .container4 .box:hover .img  img {
         transform: scale(1.1,1.1);
@@ -994,6 +1194,194 @@ ol.flickity-page-dots {
         opacity: 1;
         visibility: visible;
     } 
+
+
+    .container5 .title h1 {
+        font-size: 2.1em;
+        padding-bottom: 10px;
+    }
+    .carousel {
+        margin: 20px 15px;
+    }
+    .carousel .box {
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+        margin: 0 20px;
+    }
+
+    .carousel .box .img{
+      width: 200px;
+      height: 220px; 
+      margin-right: 10px ;
+      background: white ;
+      border-radius: 5px ;
+      overflow: hidden ;
+
+    }
+    .carousel .box .img img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+    .carousel .box .container-desc {
+        /*background-color: red;*/
+        font-family: 'Poppins', sans-serif;
+        padding-bottom: 60px;
+    }
+    .carousel .box .container-desc .title {
+        text-align: left;
+    }
+    .carousel .box .container-desc .title h2 {
+        font-size: 24px;
+    }
+    .carousel .box .container-desc .desc p {
+        color:rgb(195, 195, 195);
+    }
+    .carousel .box .container-desc .desc .price p {
+        color : white;
+        font-size: 20px;
+        padding-top: 0.3em;
+    }
+    .flickity-button {
+        opacity: 0;
+    }
+    .flickity-button:disable {
+        opacity: 0;
+    }
+
+    .flickity-page-dots .dot.is-selected {
+        background: rgb(187, 187, 187);
+    }
+    ol.flickity-page-dots {
+        display: block;
+        bottom: 0px;
+        padding-bottom: 10px;
+    }
+ 
+
+    .container6 {
+        padding-top: 4em;
+        margin: auto;
+        width: 100%;
+    }
+    .container6 .title {
+        display: block;
+        text-align: center;
+        padding-bottom: 1.8em;
+    }
+    .container6 .container-map {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .container6 .container-map .map {
+        box-shadow: rgba(17, 12, 46, 0.13) 0px 5px 20px 0px;
+        width: 90%;
+        overflow: hidden;
+    }
+    .container6 .container-map .map iframe {
+        height: 300px;
+    }
+    .container6 .container-map .desc {
+        padding-left: 0px;
+        margin: auto 20px;
+        padding-top: 2.2em;
+    }
+    .container6 .container-map .desc h1 {
+        font-size: 50px;    
+        padding-bottom: 0.5em;
+        display: none;
+    }
+    .container6 .container-map .desc p {
+        font-size: 16.5px;
+        line-height:1.4em;
+        letter-spacing: 0.5px;
+        color: #575757;
+    }
+
+
+
+    .container7 {
+        width: 100%;
+        height: 300px;
+        background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(img/cont7.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        position: relative;
+        margin-top: 4em;
+        display: flex;
+        justify-content: center;
+    }
+    .container7 .box {
+        border: 5px solid white;
+        position: relative;
+        margin: auto;
+        width: 80%;
+        height: 200px;
+    }
+    .container7 .box .text {
+        transform: translate(-50%,-50%);
+        top: 50%;
+        left: 50%;
+        position: absolute;
+        text-align: center;
+        width: 80%;
+    }
+    .container7 .box .text p {
+        color: white;
+        font-size:26px;
+        padding-bottom: 25px;
+    }
+    .container7 .box .text a {
+        color: black;
+        text-decoration: none;
+        background-color: white;
+        padding: 10px 16px;
+        font-size: 16px;
+    }
     
+
+    footer {
+        margin-top: 4em;
+        background-color: black;
+        font-family: 'Poppins', sans-serif;
+    }
+    footer .container-content {
+        display: flex;
+        flex-direction: column;
+        padding: 3em 1.2em;
+    }
+    footer .container-content .content .title h3 {
+        font-size:18px;
+        color: white;
+        padding-bottom: 0.5em;
+    }
+    footer .container-content .content .sub-title {
+        display: flex;
+        padding-bottom: 1em;
+        flex-direction: column;
+    }
+    footer .container-content .content .sub-title a {
+        text-decoration: none;
+        color: #979797;
+        font-size: 16px;
+        margin-top: 10px;
+    }
+    footer .container-content .content .sub-title a:hover {
+        color: white;
+    }
+    
+    footer .container-content .content .sub-title2 a {
+        text-decoration: none;
+        color: #979797;
+        font-size: 24px;
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+    footer .container-content .content .sub-title2 a:hover {
+        color: white;
+    }
+        
 }
 
